Fix double scrollbars (fix #44)

--- a/electron-tabs.css
+++ b/electron-tabs.css
@@ -124,6 +124,7 @@
 }
 
 .etabs-views {
+  position: relative;
   border-top: 1px solid #aaa;
   height: calc(100vh - 33px);
 }
